@@ -252,23 +252,20 @@ public class MnemosyneActivity extends AppCompatActivity {
                             //Toast toast = Toast.makeText(getApplicationContext(),
                             //        s, Toast.LENGTH_SHORT);
                             //toast.show();
-                            //Log.d("Mnemosyne", "visibility: " + Integer.toString(visibility) + " " +Integer.toString(View.SYSTEM_UI_FLAG_FULLSCREEN) );
+                            //Log.d("Mnemosyne", "visibility: " + Integer.toString(visibility));
                             if ((visibility & View.SYSTEM_UI_FLAG_FULLSCREEN) == 0) {
                                 // Exiting full screen, so show the action bar and hide
                                 // it 5 seconds later.
                                 getSupportActionBar().show();
-                                //Log.d("Mnemosyne", "show bar");
                                 new Handler().postDelayed(new Runnable() {
                                     @Override
                                     public void run() {
                                         setFullscreen();
-                                        //Log.d("Mnemosyne", "move to fullscreen");
                                     }
                                 }, 5000);
                             }
                             if (visibility == 0) {
                                 getSupportActionBar().show();
-                                //Log.d("Mnemosyne", "show bar");
                             }
                         }
                     });
